# fraud-detection

./: .gitignore  LICENSE  README.md  deploy.sh  environment.yaml  justfile  main.tf  modelcard.md  pyproject.toml  variables.tf
.github/workflows/: ci_cd.yaml  continuous_training_ci_cd.yaml
continuous_training_system/: .terraform.lock.hcl  main.tf  variables.tf
functions/inference_pipeline/: lambda_handler.py  pyproject.toml
functions/monitoring_data_model_drift/: Dockerfile  lambda_handler.py  pyproject.toml
functions/monitoring_data_model_drift/components/: data_drift_check.py  model_drift_check.py  train_model.py
functions/train_pipeline/: Dockerfile  lambda_handler.py  main_pipeline.py  pyproject.toml  rf_config.yaml
functions/train_pipeline/components/: rf_config.yaml  test_model.py  train_model.py
inference_system/: .terraform.lock.hcl  main.tf
model_data_drift_system/: .terraform.lock.hcl  main.tf  variables.tf
monitoring_system/: .terraform.lock.hcl  main.tf
prototype_notebooks/: SWEETVIZ_REPORT.html  eda.ipynb  ml_models.ipynb
repo-image/: .terraform.lock.hcl  main.tf
tests/: conftest.py  test_data.py
